feature(path-details): show sync time, fetch sync time from api, change images, adjust search panel footer image position

--- a/i18n/noi-mobility-traffic.i18n.it.json
+++ b/i18n/noi-mobility-traffic.i18n.it.json
@@ -1,6 +1,7 @@
 {
   "title": "NOI Traffico Mobilità",
   "path-details.highway-name": "A22",
+  "path-details.last-sync": "Ultima rilevazione",
   "path-details.urban-name": "SS",
   "noi.error.unknown": "Errore sconosciuto",
   "noi.error.no-locale": "Language is not supported"
