--- a/i18n/noi-mobility-traffic.i18n.en.json
+++ b/i18n/noi-mobility-traffic.i18n.en.json
@@ -2,6 +2,7 @@
   "title": "NOI Mobility Traffic",
   "path-details.highway-name": "A22",
   "path-details.urban-name": "SS",
+  "path-details.last-sync": "Last sync",
   "search.start-placeholder": "Departure?",
   "search.end-placeholder": "Arrival?",
   "map-popup.from": "From",
