feature(path-details): style stations list

--- a/i18n/noi-mobility-traffic.i18n.en.json
+++ b/i18n/noi-mobility-traffic.i18n.en.json
@@ -7,6 +7,8 @@
   "search.end-placeholder": "Arrival?",
   "map-popup.from": "From",
   "map-popup.to": "To",
+  "station-item.start": "Departure",
+  "station-item.end": "Arrival",
   "stations-modal.input-placeholder": "A22 stations",
   "stations-modal.header-start": "Select departure",
   "stations-modal.header-end": "Select destination",
