--- a/i18n/noi-mobility-traffic.i18n.en.json
+++ b/i18n/noi-mobility-traffic.i18n.en.json
@@ -2,6 +2,9 @@
   "title": "NOI Mobility Traffic",
   "path-details.highway-name": "A22",
   "path-details.urban-name": "SS",
+  "path-details.urban-error": "Error",
+  "path-details.urban-empty": "No urban path data",
+  "path-details.urban-loading": "Loading...",
   "path-details.last-sync": "Last sync",
   "search.start-placeholder": "Departure?",
   "search.end-placeholder": "Arrival?",
