feature(error): add error popup for non-critial errors (a22 path) #21

--- a/i18n/noi-mobility-traffic.i18n.en.json
+++ b/i18n/noi-mobility-traffic.i18n.en.json
@@ -1,6 +1,8 @@
 {
   "title": "NOI Mobility Traffic",
   "path-details.highway-name": "A22",
+  "path-details.highway-error": "Error",
+  "path-details.highway-loading": "Loading...",
   "path-details.urban-name": "SS",
   "path-details.urban-error": "Error",
   "path-details.urban-empty": "No urban path data",
@@ -16,10 +18,12 @@
   "stations-modal.header-start": "Select departure",
   "stations-modal.header-end": "Select destination",
   "stations-modal.select-btn": "Select",
-  "noi.error.unknown": "Unknown error. Please contact the support.",
-  "noi.error.urban-segments": "Unable to load urban segments data",
-  "noi.error.urban-segments-validation": "Urban segments data is not valid",
-  "noi.error.no-locale": "Language is not supported",
+  "error.highway-time": "Unable to load A22 travel time data",
+  "error.auth-service.unknown": "Unable to pass authentication",
+  "error.unknown": "Unknown error. Please contact the support.",
+  "error.urban-segments": "Unable to load urban segments data",
+  "error.urban-segments-validation": "Urban segments data is not valid",
+  "error.no-locale": "Language is not supported",
   "error.noi-service.unknown": "Unable to connect to Open Data Hub",
   "error.noi-service.offline": "Network error",
   "error.noi-service.data-format": "Open Data Hub data error",
