feature(path-store,path-details): laod a22 path deometry from json, render a22 path geometry errors, show a22 geometry on the map

--- a/i18n/noi-mobility-traffic.i18n.en.json
+++ b/i18n/noi-mobility-traffic.i18n.en.json
@@ -18,6 +18,8 @@
   "stations-modal.header-start": "Select departure",
   "stations-modal.header-end": "Select destination",
   "stations-modal.select-btn": "Select",
+  "error.highway-path": "Unable to load A22 geometry data",
+  "error.highway-path.incomplete": "A22 geometry data is incomplete for given segment",
   "error.highway-time": "Unable to load A22 travel time data",
   "error.auth-service.unknown": "Unable to pass authentication",
   "error.unknown": "Unknown error. Please contact the support.",
