--- a/i18n/noi-mobility-traffic.i18n.en.json
+++ b/i18n/noi-mobility-traffic.i18n.en.json
@@ -1,5 +1,5 @@
 {
-  "title": "NOI Mobility Traffic",
+  "title": "NOI Vehicular Travel Times",
   "path-details.highway-name": "A22",
   "path-details.highway-error": "Error",
   "path-details.highway-loading": "Loading...",
