--- a/i18n/noi-mobility-traffic.i18n.it.json
+++ b/i18n/noi-mobility-traffic.i18n.it.json
@@ -1,8 +1,47 @@
 {
-  "title": "NOI Traffico Mobilità",
+  "title": "NOI Tempi di Percorrenza",
   "path-details.highway-name": "A22",
-  "path-details.last-sync": "Ultima rilevazione",
-  "path-details.urban-name": "SS",
-  "error.unknown": "Errore sconosciuto",
-  "error.no-locale": "Language is not supported"
+  "path-details.highway-error": "Errore",
+  "path-details.highway-loading": "Caricamento...",
+  "path-details.urban-name": "SS12",
+  "path-details.urban-error": "Errore",
+  "path-details.urban-empty": "Nessun dato di viabilità ordinaria",
+  "path-details.urban-loading": "Caricamento...",
+  "path-details.last-sync": "Ultimo rilevamento",
+  "search.start-placeholder": "Partenza?",
+  "search.end-placeholder": "Arrivo?",
+  "map-popup.from": "Da",
+  "map-popup.to": "A",
+  "station-item.start": "Partenza",
+  "station-item.end": "Arrivo",
+  "stations-modal.input-placeholder": "Caselli A22",
+  "stations-modal.header-start": "Scegli il casello di partenza",
+  "stations-modal.header-end": "Scegli il casello di arrivo",
+  "stations-modal.select-btn": "Seleziona",
+  "error.highway-path": "Percorso A22 non disponibile",
+  "error.highway-path.incomplete": "Percorso A22 non completo per il segmento richiesto",
+  "error.highway-time": "Impossibile caricare i tempi di percorrenza A22",
+  "error.auth-service.unknown": "Impossibile effettuare l'autenticazione",
+  "error.unknown": "Errore sconosciuto. Prego contattare il supporto tecnico",
+  "error.urban-segments": "Percorso di viabilità ordinaria non disponibile",
+  "error.urban-segments-validation": "Percorso di viabilità ordinaria non valido",
+  "error.no-locale": "Lingua non supportata",
+  "error.noi-service.unknown": "Impossibile collegarsi all'Open Data Hub",
+  "error.noi-service.offline": "Errore di rete",
+  "error.noi-service.data-format": "Errore dati Open Data Hub ",
+  "error.link-station.not-found": "Segmento non trovato",
+  "error.link-station-path.not-found": "Percorso non trovato",
+  "error.link-station-velocity.not-found": "Dati di velocità del percorso non disponibili",
+  "error.jams-not-available": "Informazioni sulla congestione del traffico non disponibili",
+  "error.auth-service.offline": "Errore nell'ottenere il token per accedere ai dati protetti",
+  "link-station.Torricelli": "via Torricelli",
+  "link-station.siemens": "via Siemens",
+  "link-station.Galilei_Palermo": "via Galilei - via Palermo",
+  "link-station.Galilei_Lancia": "via Galilei - via Lancia",
+  "link-station.Galilei_Virgolo": "via Galilei - ingresso galleria Virgolo",
+  "link-station.Galleria_Virgolo": "galleria Virgolo - Bolzano nord ",
+  "link-station.P_Campiglio": "Ponte Campiglio",
+  "link-station.Arginale_Resia": "Arginale - uscita via Resia",
+  "link-station.Arginale_Palermo": "Arginale - uscita via Palermo",
+  "link-station.Agip_Einstein": "via Einstein - distributore Agip"
 }
